--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <title>My Portfolio | Yahia Saad</title>
   <meta name="description" content="Personal portfolio with dynamic binary background." />
 <script src="https://accounts.google.com/gsi/client" async defer></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7482759429519170"
-     crossorigin="anonymous"></script>
-     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7482759429519170"
-     crossorigin="anonymous"></script>
+
      <meta name="google-adsense-account" content="ca-pub-7482759429519170">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -891,7 +888,7 @@
   </header>
 
   <main>
-      <div style="align-item: center; text-align: center; align-self: center; padding: 10px;"><img src="{{ url_for('static', filename='icon.png') }}" alt="Yahia Saad" class="hero-img"></div>
+      <div style="align-item: center; text-align: center; align-self: center; padding: 10px;"><img src="icon.png" alt="Yahia Saad" class="hero-img"></div>
     <section class="hero">
       <div class="card">
         <div class="kicker">HELLO WORLD</div>
@@ -1033,7 +1030,7 @@
 
   <footer>
       <div>
-      <img src="{{ url_for('static', filename='icon.png') }}" alt="Yahia Saad"></div>
+      <img src="icon.png" alt="Yahia Saad"></div>
     <div>© 2025 Yahia Saad. All rights reserved.</div>
   </footer>
 
