--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
   </header>
 
   <main>
-      <div style="align-item: center; text-align: center; align-self: center; padding: 10px;"><img src="icon.png" alt="Yahia Saad" class="hero-img"></div>
+      <div style="align-item: center; text-align: center; align-self: center; padding: 10px;"><img src="./icon.png" alt="Yahia Saad" class="hero-img"></div>
     <section class="hero">
       <div class="card">
         <div class="kicker">HELLO WORLD</div>
