--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <meta name="description" content="Personal portfolio with dynamic binary background." />
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-     <meta name="google-adsense-account" content="ca-pub-7482759429519170">
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7482759429519170"
+     crossorigin="anonymous"></script>
+
+  
+<meta name="google-adsense-account" content="ca-pub-7482759429519170">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
