--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
    <canvas id="binary-canvas"></canvas><section class="hero">
       <div class="card">
         <div class="kicker">HELLO WORLD</div>
-        <h1>Designing high-impact experiences.        ‘</h1>
+        <h1>Designing high-impact experiences. ً ً ً ً ً ً ً ً ً ً ً ً ً</h1>
         <p class="lead">Developer portfolio with a dynamic binary background, focused on performance, clean UI, and real-world projects.</p>
         <div class="cta">
           <button onclick="openGithub()" class="btn primary">View Projects</button>
